src/components/styles.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Inter";
}

.container {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh;
  width: 100%;
  padding-top: 65px;
  margin-top: -65px;
  background-color: #333;
  z-index: -1;
}

/* --------------------------------NEW-NAVBAR------------------------- */

@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;700&display=swap");

* {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
	font-family: "Titillium Web", sans-serif;
}

:root {
	--mainColor: #29335c;
	--mainColorLight: #5767aa;
	--secondaryColor: #db2b39;
	--textColor: #eee;
}

header {
	display: flex;
	align-items: center;
	justify-content: space-between;
	height: 65px;
	padding: 0 2rem;
	background-color: #11101b;
	color: #fefefe;
}

nav a {
	margin: 0 1rem;
	color: var(--textColor);
	text-decoration: none;
  padding: 5px 10px;
}

nav a:hover {
  color: #11101b;
  background-color: #fefefe;
  border-radius: 5px;
}

nav a.active {
  background-color: #db2b39;
}

header .nav-btn {
	padding: 5px;
	cursor: pointer;
	background: transparent;
	border: none;
	outline: none;
	color: var(--textColor);
  display: none;
	opacity: 0;
	font-size: 1.8rem;
}

header div,
nav {
	display: flex;
	align-items: center;
}

@media only screen and (max-width: 1600px) {
	header .nav-btn {
		visibility: visible;
		opacity: 1;
    display: block;
	}

	header nav {
		position: fixed;
		top: -100vh;
		left: 0;
		height: 100%;
		width: 100%;
		display: flex;
		flex-direction: column;
		align-items: center;
		justify-content: center;
		gap: 1.5rem;
		background-color: #11101b;
		transition: 1s;
	}

	header .responsive_nav {
		transform: translateY(100vh);
	}

	nav .nav-close-btn {
		position: absolute;
		top: 2rem;
		right: 2rem;
	}

	nav a {
		font-size: 1.5rem;
	}
}


/* -----------------------------FAQ------------------------------ */

.faq-page {
  padding: 50px;
  height: 100vh;
  width: 100vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
}

.faq-info {
  width: 100%;
  max-width: 990px;
}

.faq-info>h1 {
  font-size: 40px;
  font-weight: 700;
  color: #fefefe;
  text-align: left;
  margin-bottom: 10px;
}

.faq-info>p{
  font-size: 20px;
  font-weight: 400;
  color: #fefefe;
  text-align: left;
  margin-bottom: 50px;
}

.wrapper {
  display: flex;
  /* height: 100vh; */
  width: 100vw;
  justify-content: center;
  align-items: flex-start;
}

.accordion{
  width: 900px;
}

.item {
  background-color: #333333;
  padding: 5px 20px;
}

.title {
  color: #ffffff;
  display: flex;
  justify-content: space-between;
  align-items: center;
  cursor: pointer;
  font-size: 20px;
  margin-top: 5px;
}

.content {
  color: #ffffff;
  max-height: 0;
  overflow: hidden;
  transition: all 0.5s cubic-bezier(0,1,0,1);
  font-size: 16px;
  padding-top: 10px;
}

.content.show {
  height: auto;
  max-height: 9999px;
  transition: all 0.5s cubic-bezier(0,1,0,1);
}

.map-container {
  height: 100vh;
  width: 100vw;
}

.disaster-sidebar {
  position: absolute;
  top: 40%; /* Changed top to 50% */
  right: 0;
  width: 250px;
  height: 10%;
  overflow-y: scroll;
  background-color: rgba(255, 255, 255, 0.9);
  padding: 10px;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
  z-index: 1;
  transform: translateY(-50%); /* Added transform translateY */
}

.disaster-sidebar h3 {
  margin-top: 0;
}

.disaster-sidebar ul {
  list-style-type: none;
  padding: 0;
}

.disaster-sidebar li {
  cursor: pointer;
}

.disaster-sidebar li:hover {
  text-decoration: underline;
}

